# azure-iot-parking-monitoring

./: .gitignore  LICENSE  README.md
.github/workflows/: master_iot-parking-web.yml
backend/: Dockerfile  pom.xml
backend/src/main/java/com/azure/iot_parking_monitoring/: IotParkingMonitoringApplication.java
backend/src/main/java/com/iot_parking_monitoring/: IotParkingMonitoringApplication.java
backend/src/main/java/com/iot_parking_monitoring/configurations/: WebSocketConfig.java  WebSocketHandler.java
backend/src/main/java/com/iot_parking_monitoring/controllers/: MainController.java  WebSocketController.java
backend/src/main/java/com/iot_parking_monitoring/receivers/: Receiver.java
backend/src/main/resources/: application.properties
backend/src/main/resources/static/css/: style.css
backend/src/main/resources/static/css/js/: script.js
backend/src/main/resources/static/js/: script.js
backend/src/main/resources/templates/: index.html
backend/src/test/java/com/iot_parking_monitoring/: IotParkingMonitoringApplicationTests.java
device/: sdkconfig  sdkconfig.old
device/components/HC-SR04/: CMakeLists.txt  Kconfig.projbuild  hc_sr04.c  hc_sr04.h
device/components/azure-iot-middleware-freertos/: CMakeLists.txt
device/components/azure-sdk-for-c/: CMakeLists.txt
device/components/coreMQTT/: CMakeLists.txt
device/components/sample-azure-iot/: CMakeLists.txt  transport_tls_esp32.c
device/config/: app_config.h  azure_iot_config.h
device/main/: CMakeLists.txt  Kconfig.projbuild  azure_iot_cloud.c  azure_iot_main.c
(+2 files in other folders)
